--- a/react-quiz-app/package.json
+++ b/react-quiz-app/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "homepage": "https://DillonAnderson40.github.io/react-quiz-2025/",
   "dependencies": {
+    "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
